# ol-pejeta-ground-control

./: .gitignore  README.md  WP.waypoints  fly.py  force_persist_analytics.py  gcs.py  main.py  main_old.py  pyproject.toml  settings.py  vehicle.py
backend/: config.py
backend/api/routes/: analytics.py  coordination.py  survey.py  survey_logs.py  vehicle.py
backend/api/websockets/: telemetry.py
backend/core/: flight_modes.py
backend/models/: vehicle.py  waypoint.py
backend/schemas/: survey.py  telemetry.py
backend/services/: analytics_service.py  coordination_service.py  survey_log_service.py  survey_service.py  vehicle_service.py  waypoint_file_service.py
front-end-vuetify/ol-pejeta-gcs/: README-OFFLINE-MAPS.md  components.d.ts  index.html  package-lock.json  package.json  typed-router.d.ts  vite.config.mjs
front-end-vuetify/ol-pejeta-gcs/src/: App.vue  main.js
front-end-vuetify/ol-pejeta-gcs/src/components/: AnalyticsDashboard.vue  AppHeader.vue  CompassIndicator.vue  InfoPanel.vue  MapComponent.vue  MapContainer.vue  MapTypeDownloadSection.vue  SidePanel.vue
front-end-vuetify/ol-pejeta-gcs/src/components/info-panel/: DistanceStatusCard.vue  DroneStatusCard.vue  MissionProgressCard.vue  SurveyButtonCard.vue  (+2 more)
front-end-vuetify/ol-pejeta-gcs/src/config/: constants.js
front-end-vuetify/ol-pejeta-gcs/src/pages/: analytics.vue
front-end-vuetify/ol-pejeta-gcs/src/styles/: settings.scss
front-end-vuetify/ol-pejeta-gcs/src/utils/: CoordinateValidation.js  MapFollowUtils.js  MapStyleConstants.js  OfflineMapUtils.js  StorageService.js  SurveyFileUtils.js
(+5 files in other folders)
